Missing obj equals in TemplateTable::fast_aldc

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • None
    • b14
    • x86, aarch64
    • generic

      TemplateTable::fast_aldc compares the just-loaded reference with Universe::the_null_sentinel. If it really is that null-sentinel, we may get a false negative (with GCs like Shenandoah that allow both from-space and to-space copies of an object to be around), and thus skip NULL-ing the ref. In other words, it would allow to get the-null-sentinel out into the wild as oop.

            Assignee:
            Roman Kennke
            Reporter:
            Roman Kennke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: