8211241: Missing obj equals in TemplateTable::fast_aldc

Reviewed-by: dcubed, coleenp